--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
         android:text=" Questões totais"
+        android:textColor="@android:color/holo_purple"
         android:textSize="20dp" />
 
     <TextView
@@ -24,7 +25,7 @@
         android:layout_margin="20dp"
         android:text="This wll be the question"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="@android:color/holo_purple"
         android:textSize="24dp"
         android:textStyle="bold" />
 
