--- a/app/src/main/res/layout/ranking_item.xml
+++ b/app/src/main/res/layout/ranking_item.xml
@@ -31,6 +31,7 @@
         android:layout_centerVertical="true"
         android:layout_marginEnd="16dp"
         android:text="Score: 0"
+        android:textColor="@android:color/holo_purple"
         android:textSize="16sp" />
 
     <TextView
@@ -44,6 +45,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:text="Nome do Jogador"
+        android:textColor="@android:color/holo_purple"
         android:textSize="18sp" />
 
 </RelativeLayout>
