--- a/app/src/main/res/layout/activity_user_management.xml
+++ b/app/src/main/res/layout/activity_user_management.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/caveira_do_rock"
     android:padding="16dp"
-    android:background="@drawable/caveira_do_rock_menu"
-    tools:context=".RankingActivity">
+    tools:context=".UserManagementActivity">
 
     <LinearLayout
         android:id="@+id/add_user_layout"
@@ -17,7 +17,9 @@
             android:id="@+id/edit_text_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Digite um nome" />
+            android:hint="Digite um nome"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/darker_gray" />
 
         <Button
             android:id="@+id/button_save"
@@ -28,18 +30,19 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button_play"
+        android:id="@+id/button_back"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/add_user_layout"
-        android:layout_marginTop="16dp"
-        android:text="Jogar" />
+        android:layout_alignParentBottom="true"
+        android:text="Voltar" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_ranking"
+        android:id="@+id/recycler_view_users"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/button_play"
-        android:layout_marginTop="16dp" />
+        android:layout_below="@id/add_user_layout"
+        android:layout_above="@+id/button_back"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp" />
 
 </RelativeLayout>
