--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,11 @@
         android:layout_marginTop="80dp"
         android:text=" Questões totais"
         android:textColor="@android:color/holo_purple"
-        android:textSize="20dp" />
+        android:textSize="20sp"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="2" />
 
     <TextView
         android:id="@+id/question"
@@ -27,7 +31,11 @@
         android:textAlignment="center"
         android:textColor="@android:color/holo_purple"
         android:textSize="24dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="3" />
 
     <LinearLayout
         android:id="@+id/choices_layout"
