--- a/app/src/main/res/layout/activity_ranking_display.xml
+++ b/app/src/main/res/layout/activity_ranking_display.xml
@@ -15,7 +15,11 @@
         android:text="Ranking 🏆"
         android:textColor="@android:color/holo_purple"
         android:textSize="22sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="3" />
 
     <TextView
         android:id="@+id/title_score"
@@ -25,7 +29,11 @@
         android:text="Pontuação"
         android:textColor="@android:color/holo_purple"
         android:textSize="22sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="3" />
 
     <View
         android:id="@+id/divider"
