--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -21,7 +21,11 @@
             android:textAlignment="center"
             android:textColor="@android:color/holo_purple"
             android:textSize="28sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:shadowColor="@android:color/black"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="3" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -31,7 +35,11 @@
             android:text="Faça seu login para começar a jogar."
             android:textAlignment="center"
             android:textColor="@android:color/holo_purple"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:shadowColor="@android:color/black"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowRadius="2" />
 
         <Button
             android:id="@+id/button_register_user"
